apps/media-downloaders/overseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media-downloaders
  labels:
    app: overseerr
spec:
  type: ClusterIP
  selector:
    app: overseerr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 5055
      port: 80
